--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,9 +5,32 @@
 <script src="https://polyfill.io/v3/polyfill.min.js"></script>
 <title>@inotom/sws-drawer demo</title>
 <style>
-[is-sws-drawer-active],
-[is-sws-drawer-active-2],
-[is-sws-drawer-active-3] {
+@supports not (overscroll-behavior: none) {
+  /* Preventing <body> scrolling in iOS Safari. */
+  [is-sws-drawer-active],
+  [is-sws-drawer-active-2],
+  [is-sws-drawer-active-3] {
+    overflow: hidden;
+  }
+  [is-sws-drawer-active] body,
+  [is-sws-drawer-active-2] body,
+  [is-sws-drawer-active-3] body {
+    position: fixed;
+  }
+}
+@supports (overscroll-behavior: none) {
+  /* Preventing body scrolling */
+  /* https://benfrain.com/preventing-body-scroll-for-modals-in-ios/ */
+  [is-sws-drawer-active] body,
+  [is-sws-drawer-active-2] body,
+  [is-sws-drawer-active-3] body {
+    touch-action: none;
+    -webkit-overflow-scrolling: none;
+    overflow: hidden;
+    overscroll-behavior: none;
+  }
+}
+[is-sws-drawer-active-4] {
   overflow: hidden;
 }
 body,
@@ -58,12 +81,16 @@ h2 {
           Toggle 1
         </sws-drawer-toggle-button>
 
-        <sws-drawer-toggle-button status-key="is-sws-drawer-active-2" x-tabindex="-1" group-keys='["is-sws-drawer-active-2", "is-sws-drawer-active-3"]'>
+        <sws-drawer-toggle-button status-key="is-sws-drawer-active-2" x-tabindex="-1" body-top-key="sws-drawer-body-top-2" group-keys='["is-sws-drawer-active-2", "is-sws-drawer-active-3"]'>
           Toggle 2
         </sws-drawer-toggle-button>
 
-        <sws-drawer-toggle-button status-key="is-sws-drawer-active-3" x-tabindex="-1" group-keys='["is-sws-drawer-active-2", "is-sws-drawer-active-3"]'>
+        <sws-drawer-toggle-button status-key="is-sws-drawer-active-3" x-tabindex="-1" body-top-key="sws-drawer-body-top-3" group-keys='["is-sws-drawer-active-2", "is-sws-drawer-active-3"]'>
           Toggle 3
+        </sws-drawer-toggle-button>
+
+        <sws-drawer-toggle-button status-key="is-sws-drawer-active-4">
+          Toggle 4
         </sws-drawer-toggle-button>
       </nav>
     </div>
@@ -131,19 +158,19 @@ h2 {
   </sws-drawer>
 
   <div class="drawer-2">
-    <sws-drawer status-key="is-sws-drawer-active-2">
+    <sws-drawer status-key="is-sws-drawer-active-2" body-top-key="sws-drawer-body-top-2">
       <p>
-        <sws-drawer-close-button status-key="is-sws-drawer-active-2" x-tabindex="-1">
+        <sws-drawer-close-button status-key="is-sws-drawer-active-2" body-top-key="sws-drawer-body-top-2" x-tabindex="-1">
           Close 2
         </sws-drawer-close-button>
       </p>
       <p>
-        <sws-drawer-close-button status-key="is-sws-drawer-active-2" x-tabindex="-1">
+        <sws-drawer-close-button status-key="is-sws-drawer-active-2" body-top-key="sws-drawer-body-top-2" x-tabindex="-1">
           <a href="#section1">Section 1</a>
         </sws-drawer-close-button>
       </p>
       <p>
-        <sws-drawer-close-button status-key="is-sws-drawer-active-2" x-tabindex="-1">
+        <sws-drawer-close-button status-key="is-sws-drawer-active-2" body-top-key="sws-drawer-body-top-2" x-tabindex="-1">
           <a href="#section2">Section 2</a>
         </sws-drawer-close-button>
       </p>
@@ -154,26 +181,87 @@ h2 {
   </div>
 
   <div class="drawer-3">
-    <sws-drawer status-key="is-sws-drawer-active-3">
+    <sws-drawer status-key="is-sws-drawer-active-3" body-top-key="sws-drawer-body-top-3">
       <p>
-        <sws-drawer-close-button status-key="is-sws-drawer-active-3" x-tabindex="-1">
+        <sws-drawer-close-button status-key="is-sws-drawer-active-3" body-top-key="sws-drawer-body-top-3" x-tabindex="-1">
           Close 2
         </sws-drawer-close-button>
       </p>
       <p>
-        <sws-drawer-close-button status-key="is-sws-drawer-active-3" x-tabindex="-1">
+        <sws-drawer-close-button status-key="is-sws-drawer-active-3" body-top-key="sws-drawer-body-top-3" x-tabindex="-1">
           <a href="#section1">Section 1</a>
         </sws-drawer-close-button>
       </p>
       <p>
-        <sws-drawer-close-button status-key="is-sws-drawer-active-3" x-tabindex="-1">
+        <sws-drawer-close-button status-key="is-sws-drawer-active-3" body-top-key="sws-drawer-body-top-3" x-tabindex="-1">
           <a href="#section2">Section 2</a>
         </sws-drawer-close-button>
       </p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
     </sws-drawer>
+
+  </div>
+
+  <div class="drawer-4">
+    <sws-drawer status-key="is-sws-drawer-active-4">
+      <p>
+        <sws-drawer-close-button status-key="is-sws-drawer-active-4">
+          Close 4
+        </sws-drawer-close-button>
+      </p>
+      <p>
+        <sws-drawer-close-button status-key="is-sws-drawer-active-4">
+          <a href="#section1">Section 1</a>
+        </sws-drawer-close-button>
+      </p>
+      <p>
+        <sws-drawer-close-button status-key="is-sws-drawer-active-4">
+          <a href="#section2">Section 2</a>
+        </sws-drawer-close-button>
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </sws-drawer>
+
   </div>
 
 </body>
