Fix selector name

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -82,7 +82,7 @@ h2 {
 .drawer-5__close-button {
   display: none;
 }
-.drawer-5-tottle {
+.drawer-5-toggle {
   display: none;
 }
 @media screen and (max-width: 768px) {
@@ -97,7 +97,7 @@ h2 {
   .drawer-5__close-button {
     display: inline;
   }
-  .drawer-5-tottle {
+  .drawer-5-toggle {
     display: inline;
   }
 }
