Add cursor style props

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -96,6 +96,12 @@ h2 {
     opacity var(--sws-drawer-animation-speed);
   --sws-drawer-transition-show: visibility 0s, opacity var(--sws-drawer-animation-speed);
 }
+sws-drawer-toggle-button {
+  --sws-drawer-toggle-button-cursor: pointer;
+}
+sws-drawer-close-button {
+  --sws-drawer-close-button-cursor: pointer;
+}
 @media screen and (max-width: 768px) {
   .drawer-5 sws-drawer {
     --sws-drawer-position: fixed;
